[package]
name = "gfx-hal-tutorials"
version = "0.1.0"
authors = ["Claire Harris <wishing.engine@gmail.com>"]
edition = "2018"

[dependencies]
gfx-hal = "=0.1.0"
glsl-to-spirv = "=0.1.6"
image = "=0.21.0"
winit = "=0.18.1"

[target.'cfg(target_os = "macos")'.dependencies.backend]
package = "gfx-backend-metal"
version = "=0.1.0"

[target.'cfg(windows)'.dependencies.backend]
package = "gfx-backend-dx12"
version = "=0.1.0"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies.backend]
package = "gfx-backend-vulkan"
version = "=0.1.0"
